k8s/ai-planner-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-planner-service
  namespace: travel-planner
spec:
  selector:
    app: ai-planner-service

  ports:
    - port: 5002
      targetPort: 5002

  type: ClusterIP
