k8s/grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana
          image: grafana/grafana:12.1.1

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          volumeMounts:
            - name: datasource
              mountPath: /etc/grafana/provisioning/datasources/datasource.yaml
              subPath: datasource.yaml

      volumes:
        - name: datasource
          configMap:
            name: grafana-datasource

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
