k8s/trip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: travel-planner
spec:
  selector:
    app: trip-service

  ports:
    - port: 5001
      targetPort: 5001

  type: ClusterIP
