k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-planner
  namespace: travel-planner
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          # API → Trip Service
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 5001

          # Everything else → Frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
